<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidWall</string>
    <string name="title_enabled">DroidWall</string>
    <string name="title_disabled">DroidWall (Firewall disabled)</string>
    <string name="showrules">Show rules</string>
    <string name="applyrules">Apply rules</string>
    <string name="saverules">Save rules</string>
    <string name="purgerules">Purge rules</string>
    <string name="setuserinfo">Set userinfo</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="fw_enabled">Firewall is enabled</string>
    <string name="fw_disabled">Firewall is disabled</string>
    <string name="log_enabled">Log is enabled</string>
    <string name="log_disabled">Log is disabled</string>
    <string name="show_log">Show log</string>
    <string name="clear_log">Clear log</string>
    <string name="pass_titleset">Set UserInfo</string>
    <string name="pass_titleget">Password required</string>
    <string name="enterpass">Enter the password:</string>
    <string name="enternewpass">Enter the new password (leave blank to remove):</string>
    <string name="toast_bin_installed">DroidWall: Binary files installed!</string>
    <string name="toast_error_enabling">"DroidWall: Error enabling firewall!"</string>
	<string name="help_dialog_text">
		<i>DroidWall - Android Firewall</i> is a front-end application for the powerful <b>iptables</b> Linux firewall.
		It allows you to restrict which applications are permitted to access your data networks.
		\nThis is the perfect solution if you don\'t have an unlimited data plan, or just wants to see your battery lasting longer.
		\n
		\n<b>Using DroidWall:</b>
		\n<b>1.</b> Click on <b>Mode</b> to switch between <i>White List</i> and <i>Black List</i> modes.
		\n<b>2.</b> Mark the applications that you want to block or allow (depending on the selected mode), for each interface.
		\n<b>3.</b> Open the menu and enable the firewall. If the firewall is already enabled, just select <b>Apply rules</b>.
		\nThe rules will be saved and automatically restored when you restart your phone.
		\nIf want to check all current iptables rules, select <b>Show rules</b> in the menu.
		\n
		\n<b>Widget:</b>
		\nTo quickly enable or disable the firewall, add the DroidWall widget to your home screen.
		\n
		\n<b>Firewall logs:</b>
		\nIf you want to see which applications have been blocked by DroidWall, open the menu and enable the Log.
		\nDroidWall will then log each application blocked. You can check the log by opening the menu and selecting <b>More -> Show log</b>.
		\n
		\n<b>Password lock:</b>
		\nYou can set a password lock for DroidWall by using the <b>Set password</b> menu option.
		\nTo remove the password protection, just reset it to blank.
	</string>
    <string name="mode">Mode:</string>
	<string name="choose3g">choose3g</string>
	<string name="choosewifi">choosewifi</string>
	<string name="appinfo">应用详细信息</string>
    <string name="cachesize">缓存大小</string>
	<string name="datasize">数据大小</string>
	<string name="codesize">App大小</string>
	<string name="totalsize">总大小</string>
    <string name="version">版本号</string>
	<string name="permission">应用权限</string>
    <string name="username">username:</string>
	<string name="password">password:</string>
	<string name="save_password">save password</string>
	<string name="sign_up">Sign Up</string>
	<string name="login">Login</string>
	<string name="forget_password">Forget Password</string>
    <string name="WhiteModeString">Mode: White list (allow selected)</string>
    <string name="BlackModeString">Mode: Black list (block selected)</string>
    <string name="change_theme">Change Theme</string>
	<string name="singup_name">注册用户名：</string>
	<string name="takephoto">拍照</string>

	<string name="photos">从相册取</string>
	<string name="surechangeimage">确定修改</string>
</resources>
