<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takephoto"
            android:textColor="#00F"/>

        <Button
            android:id="@+id/bt_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textColor="#00F"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_gravity="center"
        android:layout_marginTop="210dip" />

    <Button
        android:id="@+id/bt_exitphotoalbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/surechangeimage"
        android:textColor="#00F"
        android:gravity="end"/>

</LinearLayout>
